--- a/src/styles/boockup.css
+++ b/src/styles/boockup.css
@@ -62,8 +62,9 @@
 }
 
 .container {
-  width: 100vw;
-  height: 100vh;
+  background-color: #DDDD;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   -webkit-perspective: 1200px;
   perspective: 1200px;
@@ -85,13 +86,14 @@
   -webkit-transform: rotateX(27deg) rotateY(90deg) rotateZ(0deg);
   transform: rotateX(27deg) rotateY(90deg) rotateZ(0deg);
 }
-.book-container {
+.bookContainer {
+  background-color: blue;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   -webkit-animation: 10s rotatingAnimationY linear infinite;
   animation: 10s rotatingAnimationY linear infinite;
 }
-.book-container > div {
+.bookContainer > div {
   position: absolute;
   top: 0;
   left: 0;
@@ -100,33 +102,33 @@
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
 }
-.book-top, .book-bottom, .book-side-right {
+.book-top, .bookBottom, .book-side-right {
   background-size: auto auto;
   background-repeat: repeat;
   background-position: top left;
 }
-.book-front {
+.bookFront {
   background-image: url('../images/book-cover.jpg');
   width: 106px;
   height: 143.1px;
   -webkit-transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(0,0,0) rotateY(0deg);
   transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(0,0,0) rotateY(0deg);
 }
-.book-side-left {
+.bookSideLeft {
   background-image: url('../images/book-spine.jpg');
   width: 14.31px;
   height: 143.1px;
   -webkit-transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(-7.155px, 0, -7.155px) rotateY(-90deg);
   transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(-7.155px, 0, -7.155px) rotateY(-90deg);
 }
-.book-side-right {
+.bookSideRight {
   background-image: url('../images/book-side.jpg');
   width: 14.31px;
   height: 143.1px;
   -webkit-transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(98.845px, 0px,-7.155px) rotateY(90deg);
   transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(98.845px, 0px,-7.155px) rotateY(90deg);
 }
-.book-top {
+.bookTop {
   background-image: url('../images/book-top.jpg');
   background-position: bottom right;
   width: 106px;
@@ -134,35 +136,17 @@
   -webkit-transform: translate3d(-53px, -71.55px ,7.155px) translate3d(0px, -7.155px, -7.155px) rotateX(90deg);
   transform: translate3d(-53px, -71.55px ,7.155px) translate3d(0px, -7.155px, -7.155px) rotateX(90deg);
 }
-.book-bottom {
+.bookBottom {
   background-image: url('../images/book-top.jpg');
   width: 106px;
   height: 14.31px;
   -webkit-transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(0px, 135.945px, -7.155px) rotateX(-90deg);
   transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(0px, 135.945px, -7.155px) rotateX(-90deg);
 }
-.book-back {
+.bookBack {
   background-image: url('../images/book-back.jpg');
   width: 106px;
   height: 143.1px;
   -webkit-transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(0,0, -14.31px) rotateY(180deg);
   transform: translate3d(-53px ,-71.55px ,7.155px) translate3d(0,0, -14.31px) rotateY(180deg);
 }
-#credit {
-  position: fixed;
-  bottom: 1em;
-  right: 1em;
-  z-index: 99;
-  background-color: #fff;
-  border-radius: 8px;
-  box-sizing: border-box;
-  padding: .3rem 1rem;
-  width: 21rem;
-  height: 20px;
-  -webkit-transition: background .2s;
-  transition: background .2s;
-}
-#credit:hover {
-  background-color: #d8d8d8;
-}
-      
