--- a/src/components/headerMain.scss
+++ b/src/components/headerMain.scss
@@ -1,17 +1,41 @@
 @import "../styles/index.scss";
 
 #headerMain {
+  background-color: $background-color;
+  position: fixed;
   grid-column-gap: $gap;
   width: 100%;
   height: 60px;
   z-index: 100;
   display: grid;
   grid-template-columns: $grid;
-  grid-template-rows: 0;
-  background-color: transparent;
+  grid-template-rows: 0; 
   padding: $margin-top $margin-left-right;
   transition: all ease 1s;
   margin-bottom: $margin-bottom-primary;
+  z-index: 10;
+  transition: ease all 0.3s;
+}
+
+#headerMainLandingPage {
+  min-width: 0;
+  background-color: transparent;
+  width: 100%;
+  position: absolute;
+  bottom: 20px;
+  //fixed height to make the jumping stop when resizing
+  height: 30px;
+  z-index: 9;
+  display: grid;
+  grid-template-columns: $grid;
+  grid-template-rows: 0;
+  background-color: transparent;
+  padding: 0 $margin-left-right $margin-top $margin-left-right;
+  transition: all ease 1s;
+}
+
+#headerMainLandingPage {
+  padding: 0 $margin-left-right;
 }
 
 
@@ -24,7 +48,7 @@
   background-color: $primary-grey;
   margin: 0;
   padding: 0.625rem;
-  height: 100vh;
+  height: 100%;
   transform: translateY(-100%);
 }
 
@@ -131,10 +155,11 @@
   #navMain {
     display: none;
   }
-  #headerMain {
+  #headerMain, #headerMainLandingPage {
+    // padding-top: 19px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    // align-items: center;
   }
 }
 
@@ -142,9 +167,16 @@
   #headerMain {
     font-size: $font-size-small;
     margin-bottom: $margin-bottom-mobile;
-    // background-color: $primary-grey;
+    // padding-top: 0;
   }
+
+  #headerMainLandingPage {
+    font-size: $font-size-small;
+    bottom: 0px;
+  }
+
   #h1Main {
+ 
     font-size: $font-size-small;
   }
 
