--- a/src/components/forms.scss
+++ b/src/components/forms.scss
@@ -15,7 +15,7 @@
   position: absolute;
   display: block;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   top: 0;
   bottom: 0;
   left: 0;
@@ -23,4 +23,10 @@
 }
 
 @media (max-width: 750px) {
+  #forms {
+    //this is a fallback
+    height: 100vh;
+    //this makes the height: 100% on mobile
+    height: -webkit-fill-available;
+  }
 }
