--- a/src/components/headerMain.scss
+++ b/src/components/headerMain.scss
@@ -143,7 +143,7 @@
 }
 
 #h1Main {
-  cursor: pointer;
+  cursor: default;
   grid-column: 1 / span 4;
 }
 
@@ -152,6 +152,10 @@
 }
 
 @media (max-width: 1100px) {
+  #h1Main {
+    cursor: pointer;
+  }
+
   #navMain {
     display: none;
   }
@@ -176,7 +180,7 @@
   }
 
   #h1Main {
- 
+    cursor: pointer;
     font-size: $font-size-small;
   }
 
