--- a/src/components/forms.scss
+++ b/src/components/forms.scss
@@ -25,8 +25,8 @@
 @media (max-width: 750px) {
   #forms {
     //this is a fallback
-    height: 100vh;
+    // height: 100vh;
     //this makes the height: 100% on mobile
-    height: -webkit-fill-available;
+    height: 100vh;
   }
 }
