--- a/src/components/headerMain.scss
+++ b/src/components/headerMain.scss
@@ -22,7 +22,7 @@
   background-color: transparent;
   width: 100%;
   position: absolute;
-  bottom: 15px;
+  bottom: 25px;
   //fixed height to make the jumping stop when resizing
   height: 30px;
   z-index: 9;
@@ -31,11 +31,11 @@
   grid-template-rows: 0;
   background-color: transparent;
   padding: 0 $margin-left-right $margin-top $margin-left-right;
-  transition: all ease 1s;
 }
 
 #headerMainLandingPage {
-  padding: 0 $margin-left-right;
+  padding: $margin-top $margin-left-right;
+  grid-column-gap: 1.875rem;
 }
 
 
@@ -133,8 +133,17 @@
   stroke: $secondary-gray;
 }
 
-#navMain {
-  grid-column: 5 / span 2;
+#navMain, #navMainLanding {
+  grid-column: 5 / span 3;
+}
+
+#navMainLanding a:nth-child(1) {
+  transition: color 0.5s linear;
+}
+
+#navMainLanding a:nth-child(1):hover {
+  transition: color 0.1s linear;
+  color: $primary-grey;
 }
 
 #cartMain {
@@ -176,7 +185,7 @@
 
   #headerMainLandingPage {
     font-size: $font-size-small;
-    bottom: 0px;
+    bottom: 15px;
   }
 
   #h1Main {
