--- a/src/components/books.scss
+++ b/src/components/books.scss
@@ -1,6 +1,5 @@
 @import "../styles/index.scss";
 
-
 #books {
     margin: $margin-left-right;
     display: grid;
@@ -17,4 +16,14 @@
     height: 400px;
 }
 
+@media (max-width: 1100px) {
+    #books {
+        grid-template-columns: 1fr 1fr;
+    }
+}
 
+@media (max-width: 750px) {
+    #books {
+        grid-template-columns: 1fr;
+    }
+}
