--- a/src/components/books.scss
+++ b/src/components/books.scss
@@ -15,6 +15,8 @@
     color: $primary-grey;
     grid-template-rows: 0;
     grid-column-gap: 1.875rem;
+    font-family: $font;
+    font-weight: 300;
 }
 
 #aboutPoolBooksWrapper a {
@@ -37,7 +39,6 @@
     justify-self: end;
     grid-column: 7 / span 2;
 }
-
 
 sup {
     vertical-align: top;
@@ -83,7 +84,6 @@ sup {
         display: none;
     }
 
-
     .priceMobile {
         display: block;
     }
@@ -91,5 +91,4 @@ sup {
     .priceDesktop {
         display: none;
     }
-
 }
