--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 $background-color: #fff;
 $primary-color: #000;
 $primary-grey: #dddddd;
-$secondary-gray: #9B9B9B;
+$secondary-gray: #9b9b9b;
 $font: "Nuckle Book", sans-serif;
 $margin-left-right: 1.0625rem;
 $margin-top: 1.05rem;
@@ -28,6 +28,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-weight: 300;
 }
 
 path {
@@ -45,7 +46,6 @@ h1 {
 }
 
 p {
-  font-weight: 500;
   margin: 0;
   margin-bottom: 1.5625rem;
   padding: 0;
@@ -88,7 +88,6 @@ a:hover {
   height: 1000px;
 }
 
-
 //Grid layout
 
 .col1 {
@@ -126,9 +125,9 @@ a:hover {
 }
 
 @media (max-width: 750px) {
-  .col1, 
-  .col2, 
-  .col3, 
+  .col1,
+  .col2,
+  .col3,
   .col4 {
     margin-bottom: $gap-mobile-bottom;
   }
@@ -137,7 +136,11 @@ a:hover {
     padding-top: 80px;
   }
 
+  h2 {
+    font-size: 10px;
+  }
+
   p {
-      font-size: $font-size-small;
+    font-size: $font-size-small;
   }
 }
