--- a/src/components/books.scss
+++ b/src/components/books.scss
@@ -61,7 +61,12 @@ sup {
 
 .bookRenderingContainer {
     width: 100%;
-    height: 400px;
+    height: 300px;
+}
+
+.bookRenderingContainer img{
+    width: 100%;
+    height: 100%;
 }
 
 @media (max-width: 1100px) {
