--- a/src/components/pages.scss
+++ b/src/components/pages.scss
@@ -33,7 +33,10 @@
 }
 
 .imgContainerGallery {
+  position: relative;
+  display: block;
   margin-right: 100px;
+  // min-width: 100%;
   width: 100%;
 }
 
@@ -90,6 +93,9 @@ img {
 @media (max-width: 750px) {
   #galleryProductPage {
     height: 410px;
+  }
+  .imgContainerGallery img {
+    height: 40vh;
   }
 
   #about,
