--- a/src/components/books.scss
+++ b/src/components/books.scss
@@ -61,12 +61,14 @@ sup {
 
 .bookRenderingContainer {
     width: 100%;
-    height: 300px;
+    height: 100%;
 }
 
 .bookRenderingContainer img{
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    display: inline-block;
+    object-fit: contain;
 }
 
 @media (max-width: 1100px) {
