--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -84,6 +84,10 @@ a:hover {
   padding-top: $margin-bottom-primary;
 }
 
+.contentWithoutMargin {
+  padding-top: 2px;
+}
+
 #filler {
   height: 1000px;
 }
