Refactoring, Books back to initial state, start of Cart implementation

--- a/src/components/pages.scss
+++ b/src/components/pages.scss
@@ -1,4 +1,4 @@
-@import "../styles/index.scss";
+@import "../styles/variables.scss";
 
 //Pages
 
@@ -37,7 +37,7 @@
   display: block;
   margin-right: 100px;
   // min-width: 100%;
-  width: 100%;
+  // width: 100%;
 }
 
 .imgContainerGallery img {
