--- a/src/components/books.scss
+++ b/src/components/books.scss
@@ -1,14 +1,19 @@
-@import "../styles/index.scss";
+@import "../styles/variables.scss";
 
 #books {
+    min-height: 0;
+    min-width:0;
     margin: $margin-left-right;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
     grid-gap: $gap;
     margin-bottom: $margin-bottom-primary;
 }
 
 #aboutPoolBooksWrapper {
+    min-height: 0;
+    min-width:0;
     margin: $margin-left-right;
     display: grid;
     grid-template-columns: $grid;
@@ -28,14 +33,19 @@
 }
 
 #aboutPoolBooksAboutText {
+    min-width:0;
     grid-column: 1 / span 4;
 }
 
 #aboutPoolBooksAboutAddress {
+    min-height: 0;
+    min-width:0;
     grid-column: 5 / span 3;
 }
 
 #aboutPoolBooksSocialMedia {
+    min-height: 0;
+    min-width:0;
     justify-self: end;
     grid-column: 7 / span 2;
 }
@@ -46,28 +56,36 @@ sup {
 }
 
 .bookTitle {
+    min-height: 0;
+    min-width:0;
     margin-top: 30px;
 }
 
 .priceMobile {
+    min-height: 0;
+    min-width:0;
     margin-top: 8px;
     color: $primary-grey;
     display: none;
 }
 
 .book {
+    min-height: 0;
+    min-width:0;
     width: 100%;
 }
 
 .bookRenderingContainer {
     cursor: pointer;
-    min-width: 100%;
+    min-width: 0;
+    min-height: 0;
     width: 100%;
-    height: 100%;
+    // height: 100%;
 }
 
 .bookRenderingContainer img{
-    min-width: 100%;
+    min-width: 0;
+    min-height: 0;
     max-width: 100%;
     display: inline-block;
     object-fit: contain;
