--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,24 +1,9 @@
+@import "../styles/variables.scss";
+
 @font-face {
   font-family: "Nuckle Book";
   src: url("../fonts/NuckleBook.woff");
 }
-
-$background-color: #fff;
-$primary-color: #000;
-$primary-grey: #dddddd;
-$secondary-gray: #9b9b9b;
-$font: "Nuckle Book", sans-serif;
-$margin-left-right: 1.0625rem;
-$margin-top: 1.05rem;
-$font-size: 1.5625rem;
-$margin-bottom-primary: 13.5rem;
-$margin-bottom-mobile: 3rem;
-$margin-mobile: 0.625rem;
-$font-size-small: 0.9375rem;
-$grid: repeat(8, 1fr);
-$grid-tablet: repeat(4, 1fr);
-$gap: 1.875rem;
-$gap-mobile-bottom: 3rem;
 
 * {
   box-sizing: border-box;
@@ -46,6 +31,7 @@ section {
 h1 {
   margin: 0;
   font-weight: normal;
+  text-transform: uppercase;
   font-size: $font-size;
 }
 
@@ -147,6 +133,10 @@ a:hover {
 
   h2 {
     font-size: 10px;
+  }
+
+  h1 {
+    font-size: $font-size-small;
   }
 
   p {
