Fixed Navigation Padding

--- a/src/components/headerMain.scss
+++ b/src/components/headerMain.scss
@@ -180,6 +180,7 @@
 @media (max-width: 750px) {
   #headerMain {
     font-size: $font-size-small;
+    height: 50px;
     margin-bottom: $margin-bottom-mobile;
     // padding-top: 0;
   }
