--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,7 +9,7 @@ $font-size: 1.5625rem;
 $margin-bottom-primary: 13.5rem;
 $margin-bottom-mobile: 3rem;
 $margin-mobile: 0.625rem;
-$font-size-small: 0.9375rem;
+$font-size-small: 14px;
 $grid: repeat(8, 1fr);
 $grid-tablet: repeat(4, 1fr);
 $gap: 1.875rem;
