--- a/src/components/books.scss
+++ b/src/components/books.scss
@@ -21,6 +21,8 @@
     grid-column-gap: 1.875rem;
     font-family: $font;
     font-weight: 300;
+    height: 100%;
+    padding-bottom: 10px;
 }
 
 #aboutPoolBooksWrapper a {
@@ -34,6 +36,7 @@
 #aboutPoolBooksAboutText {
     min-width:0;
     grid-column: 1 / span 4;
+    min-height: 0;
 }
 
 #aboutPoolBooksAboutAddress {
@@ -94,6 +97,12 @@ sup {
     #books {
         grid-template-columns: 1fr 1fr;
     }
+
+    #aboutPoolBooksWrapper {
+        display: block;
+        padding-bottom: 0px;
+    }
+
 }
 
 @media (max-width: 750px) {
