--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -2,6 +2,7 @@
 
 #footerWrapper {
   margin-top: $margin-bottom-primary;
+  margin-bottom: 0;
 }
 
 #footer {
@@ -25,7 +26,7 @@
 @media (max-width: 1100px) {
 
   #footerWrapper {
-    margin-top: $margin-bottom-mobile;
+    margin-top: 90px;
   }
 
   #footer {
