PART II, with minor bugs, safari slider bug

--- a/src/components/books.scss
+++ b/src/components/books.scss
@@ -10,6 +10,11 @@
     grid-gap: $gap;
 }
 
+#strike {
+    text-decoration: line-through;
+    display: inline-block;
+}
+
 #aboutPoolBooksWrapper {
     min-height: 0;
     min-width:0;
