--- a/src/components/headerMain.scss
+++ b/src/components/headerMain.scss
@@ -68,7 +68,7 @@
 
 #text {
   display: inline-block;
-  transition: ease 0.4s all;
+  // transition: ease 0.4s all;
 }
 
 #mobileNestedNav a:nth-last-child(1) {
@@ -81,7 +81,7 @@
 
 #poolText {
   display: inline-block;
-  transition: ease 0.4s all;
+  // transition: ease 0.4s all;
 }
 
 #beanWrapper {
