--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "Nuckle Book";
-  src: url("../fonts/NuckleBook.woff");
+  src: url("../fonts/nuckle_medium-webfont.woff");
 }
 
 * {
