--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -66,7 +66,7 @@ a:hover {
   color: $primary-grey;
 }
 
-.activeMobile {
+.active-mobile {
   color: $secondary-gray;
 }
 
@@ -75,7 +75,7 @@ a:hover {
   padding-top: $margin-bottom-primary;
 }
 
-.contentWithoutMargin {
+.content-without-margin {
   transition: all 0.6s ease;
   padding-top: 2px;
 }
@@ -86,45 +86,45 @@ a:hover {
 
 //Grid layout
 
-.col1 {
+.col-1 {
   grid-column: 1 / span 2;
 }
 
-.col2 {
+.col-2 {
   grid-column: 3 / span 2;
 }
 
-.col3 {
+.col-3 {
   grid-column: 5 / span 2;
 }
 
-.col4 {
+.col-4 {
   grid-column: 7 / span 2;
 }
 
 @media (max-width: 1170px) {
-  .col1 {
+  .col-1 {
     grid-column: 1 / span 2;
   }
 
-  .col2 {
+  .col-2 {
     grid-column: 3 / span 2;
   }
 
-  .col3 {
+  .col-3 {
     grid-column: 1 / span 2;
   }
 
-  .col4 {
+  .col-4 {
     grid-column: 3 / span 2;
   }
 }
 
 @media (max-width: 750px) {
-  .col1,
-  .col2,
-  .col3,
-  .col4 {
+  .col-1,
+  .col-2,
+  .col-3,
+  .col-4 {
     margin-bottom: $gap-mobile-bottom;
   }
 
