CMS Deployed, URLS changed

--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -59,7 +59,7 @@
   padding: $margin-top $margin-left-right $margin-top $margin-left-right;
   transition: all ease 1s;
   margin-top: $margin-bottom-primary;
-  margin-top: 300px;
+  // margin-top: 300px;
 }
 
 #footer-nav {
